# sitra

./: README.md  io.github.ronniedroid.sitra.json  io.github.ronniedroid.sitra.json~  io.github.sitraorg.sitra.json  meson.build
data/: io.github.ronniedroid.sitra.data.gresources.xml  io.github.ronniedroid.sitra.desktop.in  io.github.ronniedroid.sitra.gschema.xml  io.github.ronniedroid.sitra.metainfo.xml.in  io.github.ronniedroid.sitra.service.in  io.github.sitraorg.sitra.desktop.in  io.github.sitraorg.sitra.gschema.xml  io.github.sitraorg.sitra.metainfo.xml.in  io.github.sitraorg.sitra.service.in  meson.build
data/fonts/: meson.build
data/icons/: meson.build
po/: POTFILES.in  ar.po  io.github.ronniedroid.sitra.pot  meson.build
src/: application.vala  data_translations.vala  fontInfo.vala  font_filter.vala  font_info.vala  font_loader.vala  fonts.json  fonts_manager.vala  integration_dialog.blp  integration_dialog.vala  io.github.ronniedroid.sitra.src.gresource.xml  io.github.sitraorg.sitra.src.gresource.xml  main.vala  meson.build  preview_manager.vala  shortcuts-dialog.blp  window.blp  window.vala
src/assets/: categories  google-fonts.json  licenses  preview_text  style.css
src/gtk/: style.css
src/helpers/: fonts_filter_helper.vala  meson.build  network_helper.vala
src/managers/: base_info_manager.vala  categories.vala  categories_manager.vala  font_manager.vala  fonts_manager.vala  licenses.vala  licenses_manager.vala  meson.build  preview_manager.vala
src/modals/: font_info.vala
src/models/: font_info.vala  meson.build
tools/: extract_data_strings.sh
