install_data(
  'myserif.ttf',
  install_dir: get_option('datadir') / 'fonts'
)

install_data(
  'mysans.ttf',
  install_dir: get_option('datadir') / 'fonts'
)

install_data(
  'mydisplay.ttf',
  install_dir: get_option('datadir') / 'fonts'
)

install_data(
  'myhandwriting.ttf',
  install_dir: get_option('datadir') / 'fonts'
)